Added support for sources which use HTTP basic authentication, such as Axis webcams (www.axis.com). This module needs localizing to German, Swiss German, Spanish and Chinese.